<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/spinnaz_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#aa0000"
            android:textSize="32dp"
            android:textStyle="bold"
            android:typeface="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/xAxisLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_axis_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/yAxisLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/xAxisLabel"
                android:text="@string/y_axis_rotation"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/zAxisLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/yAxisLabel"
                android:layout_below="@+id/yAxisLabel"
                android:text="@string/z_axis_rotation"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_medium" >

            <TextView
                android:id="@+id/xAxisText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/yAxisText"
                android:layout_alignLeft="@+id/yAxisText"
                android:paddingLeft="@dimen/padding_small"
                android:text="@string/default_no_data"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/yAxisText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_small"
                android:text="@string/default_no_data"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/zAxisText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/zAxisLabel"
                android:layout_alignBottom="@+id/zAxisLabel"
                android:layout_alignLeft="@+id/yAxisText"
                android:paddingLeft="@dimen/padding_small"
                android:text="@string/default_no_data"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/transmitCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/zAxisLabel"
        android:layout_below="@+id/zAxisLabel"
        android:text="@string/transmit_label" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true" >

            <TextView
                android:id="@+id/dumpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DEBUG:"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dumpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_medium"
                android:text="@string/default_no_data"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>
    </RelativeLayout>

</LinearLayout>